website/websites/u64q/code/nbody.1.scala.log

Sat, 19 Jun 2010 02:40:59 GMT

MAKE:
mv nbody.scala nbody.scala
mv: `nbody.scala' and `nbody.scala' are the same file
make: [nbody.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.8.0.RC6/bin/scalac nbody.scala
nbody.scala:41: error: not found: type double
   def advance(dt: double) = {
                   ^
one error found
make: [nbody.scala_run] Error 1 (ignored)
3.55s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar nbody 500000

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: nbody
Caused by: java.lang.ClassNotFoundException: nbody
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: nbody.  Program will exit.
